[package]
name = "patchworkmcp"
version = "0.1.0"
edition = "2021"
description = "PatchworkMCP drop-in feedback tool for Rust MCP servers"
license = "MIT"
readme = "README.md"
repository = "https://github.com/Brightwing-Systems-LLC/patchworkmcp-rust"
homepage = "https://patchworkmcp.com"
keywords = ["mcp", "feedback", "llm", "patchworkmcp", "ai"]
categories = ["api-bindings", "web-programming::http-client"]
authors = ["Brightwing Systems LLC <support@brightwingsystems.com>"]

[dependencies]
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
